--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kidane Mobile | Luxury Mobile Showroom</title>
+  <title>Kidane Mobile</title>
   <meta name="description"
     content="Discover the latest smartphones, wearables, and accessories at Kidane Mobile - where innovation meets luxury.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -2233,5 +2233,6 @@
     });
   </script>
 </body>
+
 
 </html>
